Lending Club Updated Doc

--- a/Lending Club/MLP - Lending Club.ipynb
+++ b/Lending Club/MLP - Lending Club.ipynb
@@ -312,6 +312,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Binary Classification using Feed Forward Neural Network - Keras **"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Keras works by having mutiple layers, activation functions and loss- which in this case is binary-crossentropy because as we mentioned it is a binary classification problem (either it will be fully paid or not).*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 92,
    "metadata": {},
@@ -1110,6 +1124,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Results :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**A comparison of all the models accuracy and the misclassification error(all the loans that were misclassified as Fully Paid when they should be default)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**The current algorithm right now misclassifies default loan 30% of the time, so our entire aim was to find a algorithm that does a better job than the current machine.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Model | Accuracy  | Missclassified Loans Percentage\n",
     "------- | -------------|--------------\n",
     "Decision Tree| 60% | 19%\n",
@@ -1125,7 +1160,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Looking at the result from all the models we can see that though Random Forest Grid Search has a high accuracy it also has a high  missclassified loans percentage so the better model to use is Neural Networks."
+    "**The highest accuracy we get is 70.14% from Random Forest GridSearchCV which can not be our ideal model for multiple reasons.**\n",
+    "1. *It has a higher misclassification rate, thought it might be a difference of some decimal points but when there are say 10,000 people, just 1% accounts for 100 people(not to forget the amount of money you lose when you give out loans to that many people).*\n",
+    "2. *GridSearchCV on Random forest takes longer than any algorith mentioned(MLP is faster than this).*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Our second option is MLP with multiple layers which gives us an accuracy of 70.04% and misclassifies 28.47% people in the wrong category, 28.47% is better than 30% which means that this algorithm does a better job than the current algorithm.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**This is the reason we decide to go with FeedForward Neural Network(MLP multiple layers) as the final model we use because of the high accuracy and less misclassification error.**"
    ]
   }
  ],
